--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.4",
     "moment": "^2.22.2",
     "nodemon": "^1.18.5",
+    "path": "^0.12.7",
     "request-json": "^0.6.3"
   }
 }
